# Job_portal

./: .dockerignore  .gitignore  README.md  docker-compose.oracle.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
agents/: __init__.py  base.py  job_analysis_agent.py  success_predictor_agent.py
backend/: alembic.ini  main.py  requirements.txt
backend/api/: router.py
backend/core/: config.py  exceptions.py  logging.py
backend/db/: init_db.py  session.py
backend/models/: __init__.py  auth_user.py  company_signal.py  content.py  network_connection.py  notification.py  user_profile.py
backend/schemas/: agent.py  common.py  company.py  content.py  dashboard.py  job.py  notification.py  profile.py
backend/services/: application_service.py  company_service.py  content_service.py  job_service.py  manual_task_service.py  profile_service.py
config/: sources.yml
crawlers/: requirements.txt  scrapy.cfg
crawlers/job_crawler/: middlewares.py
database/init/: 00_extensions.sql  01_enums.sql  02_seed_data.sql  03_schema.sql
deploy/: deploy.sh
engines/apply/: __init__.py  ats_router.py
engines/company_radar/: __init__.py  signal_collector.py
engines/content/: __init__.py
engines/embedding/: __init__.py  embedder.py
engines/matching/: __init__.py  recency_scorer.py  salary_scorer.py  seniority_scorer.py
frontend/: Dockerfile.prod  package.json  vite.config.ts
personal-job-agent/: .env.example  Makefile  README.md  docker-compose.prod.yml
workers/: Dockerfile  db_utils.py  rate_limiter.py
(+187 files in other folders)
